fixed list section overflow

--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,7 @@ h2 {
 .main-img {
   margin: .5em auto;
   width: 100%;
+  object-fit: contain;
 }
 
 .main-title {
@@ -236,7 +237,6 @@ h2 {
 @media  ( min-width: 1024px) {
   .main {
     display: flex;
-    height: 70vh;
   }
 
   .main-content {
@@ -246,7 +246,8 @@ h2 {
 
   .main-img {
     width: 100%;
-    height: 50%;
+    height: 50vh;
+    object-position: top;
     margin: 0;
     object-fit: cover;
   }
@@ -326,7 +327,11 @@ h2 {
   .list {
     display: flex;
     margin: 1em 0;
-    margin-top: 0;
+    flex-wrap: wrap;
+  }
+
+  .list-section {
+    width: 33%;
   }
 
   .list-span {
